# NexusDB

./: .gitignore  README.md  pyproject.toml  requirements.txt
nexusdb/: __init__.py
nexusdb/api/: server.py
nexusdb/core/: collection.py  vector.py
nexusdb/core/index/: flat_index.py
nexusdb/persistence/: __init__.py  config.py  sqlite_backend.py
nexusdb/utils/: distance.py
tests/: test_api.py  test_collection.py  test_distance.py  test_flat_index.py  test_sqlite_persistence.py  test_vector.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.jsx  api.js  index.css
ui/src/components/: Sidebar.css  Sidebar.jsx  Toast.css  Toast.jsx  Topbar.css  Topbar.jsx
ui/src/pages/: Collections.css  Collections.jsx  Dashboard.css  Dashboard.jsx  Search.css  Search.jsx  Vectors.css  Vectors.jsx  Visualizer.css  Visualizer.jsx
